--- a/_config.yml
+++ b/_config.yml
@@ -2,16 +2,23 @@ encoding: UTF-8
 exclude:
 - Gemfile
 - Gemfile.lock
-#kramdown:
-#  input: GFM
-#  hard_wrap: false
-#future: true
-#jailed: false
-
-#highlighter: rouge
-markdown: kramdown
+- Makefile
+- notes.md
 
 permalink: /:title
+
+kramdown:
+  auto_ids:      true
+  entity_output: as_char
+  toc_levels:    1..6
+  smart_quotes:  lsquo,rsquo,ldquo,rdquo
+  input:         GFM
+  hard_wrap:     false
+  footnote_nr:   1
+  show_warnings: false
+  syntax_highlighter: rouge
+
+highlighter: rouge
 
 #plugins:
 #- jekyll-minifier
