--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ kramdown:
   toc_levels:    1..6
   smart_quotes:  lsquo,rsquo,ldquo,rdquo
   input:         GFM
-  hard_wrap:     false
+  hard_wrap:     true
   footnote_nr:   1
   show_warnings: false
   syntax_highlighter: rouge
