--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,13 @@ kramdown:
   footnote_nr:   1
   show_warnings: false
   syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    css_class: 'highlight'
+    span:
+      line_numbers: false
+    block:
+      line_numbers: true
+      start_line: 1
 
 plugins:
   - jekyll-sitemap
-  - jekyll-minifier
-  - jekyll-jsminify
