--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -3,6 +3,10 @@
 	"name": "Mitja Felicijan",
 	"author": "Mitja Felicijan",
 	"icons": [{
+		"src": "/assets/avatar.png",
+		"sizes": "512x512",
+		"type": "image/png"
+	}, {
 		"src": "/assets/avatar.gif",
 		"sizes": "512x512",
 		"type": "image/gif"
