--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -14,6 +14,6 @@
 	"start_url": "/",
 	"scope": "/",
 	"display": "standalone",
-	"theme_color": "#c242f4",
-	"background_color": "#c242f4"
+	"theme_color": "#ffffff",
+	"background_color": "#ffffff"
 }
