--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 encoding: UTF-8
 exclude:
-- Gemfile
-- Gemfile.lock
-- Makefile
-- notes.md
+  - Gemfile
+  - Gemfile.lock
+  - Makefile
+  - notes.md
 
 permalink: /:title
 safe: false
@@ -11,19 +11,19 @@ safe: false
 author: Mitja Felicijan
 domain: https://mitjafelicijan.com/
 description: Embedded systems developer and fanatical fan of science fiction
-twitter: "@mitjafelicijan"
+twitter: '@mitjafelicijan'
 avatar: assets/avatar.gif
-cache_version: 20180811
-theme_color: "#ffffff"
+cache_version: 20181119
+theme_color: '#ffffff'
 
 kramdown:
-  auto_ids:      true
+  auto_ids: true
   entity_output: as_char
-  toc_levels:    1..6
-  smart_quotes:  lsquo,rsquo,ldquo,rdquo
-  input:         GFM
-  hard_wrap:     true
-  footnote_nr:   1
+  toc_levels: 1..6
+  smart_quotes: lsquo,rsquo,ldquo,rdquo
+  input: GFM
+  hard_wrap: true
+  footnote_nr: 1
   show_warnings: false
   syntax_highlighter: rouge
   syntax_highlighter_opts:
@@ -35,4 +35,4 @@ kramdown:
       start_line: 1
 
 plugins:
-- jekyll-sitemap
+  - jekyll-sitemap
