--- a/package.json
+++ b/package.json
@@ -12,22 +12,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "dayjs": "^1.8.6",
-    "gulp": "^4.0.0",
-    "gulp-clean-css": "^4.0.0",
+    "browser-sync": "^2.26.7",
+    "dayjs": "^1.8.16",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
-    "gulp-terser": "^1.1.7",
-    "html-minifier": "^3.5.21",
+    "gulp-terser": "^1.2.0",
+    "html-minifier": "^4.0.0",
     "http-server": "^0.11.1",
-    "markdown-it": "^8.4.2",
-    "markdown-it-anchor": "^5.0.2",
+    "markdown-it": "^9.1.0",
+    "markdown-it-anchor": "^5.2.4",
     "markdown-it-checkbox": "^1.1.0",
     "markdown-it-deflist": "^2.0.3",
-    "markdown-it-footnote": "^3.0.1",
-    "markdown-it-prism": "^2.0.1",
-    "markdown-it-table": "^2.0.4",
-    "nunjucks": "^3.1.7",
-    "slugify": "^1.3.4",
-    "yaml": "^1.3.2"
+    "markdown-it-footnote": "^3.0.2",
+    "markdown-it-prism": "^2.0.3",
+    "nunjucks": "^3.2.0",
+    "yaml": "^1.6.0"
   }
 }
