--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
   "hosting": {
     "public": "public",
-    "cleanUrls": true,
+    "cleanUrls": false,
     "ignore": [
       "firebase.json",
       "tmp/",
