--- a/config
+++ b/config
@@ -1,7 +1,7 @@
 TEMPLATES = site.tmpl
 SOURCE = src
 OUTPUT = public
-TITLE = Mitja Felicijan - Embedded systems developer
+TITLE = Mitja Felicijan
 DESCRIPTION = Embedded systems developer and fanatical fan of science fiction
 GOOGLE_VERIFICATION = EwUGW1WlCkRIQuyQ9AE1-bLitWthw-eVMZFTAMZVZaA
 URL = https://mitjafelicijan.com
