--- a/config
+++ b/config
@@ -4,6 +4,7 @@ OUTPUT = public
 TITLE = Mitja Felicijan
 DESCRIPTION = Embedded systems developer and fanatical fan of science fiction
 GOOGLE_VERIFICATION = EwUGW1WlCkRIQuyQ9AE1-bLitWthw-eVMZFTAMZVZaA
+TWITTER_HANDLE = @mitjafelicijan
 URL = https://mitjafelicijan.com
 AUTHOR = Mitja Felicijan
 
