--- a/config
+++ b/config
@@ -2,7 +2,7 @@ TEMPLATES = site.tmpl
 SOURCE = src
 OUTPUT = public
 TITLE = Mitja Felicijan
-DESCRIPTION = Embedded systems developer and fanatical fan of science fiction
+DESCRIPTION = Fan of science fiction and dabbler in code
 GOOGLE_VERIFICATION = EwUGW1WlCkRIQuyQ9AE1-bLitWthw-eVMZFTAMZVZaA
 TWITTER_HANDLE = @mitjafelicijan
 URL = https://mitjafelicijan.com
