--- a/staticgen.yml
+++ b/staticgen.yml
@@ -11,7 +11,7 @@ description: Fan of science fiction and dabbler in code
 author: Mitja Felicijan
 email: mitja.felicijan@gmail.com
 domain: https://mitjafelicijan.com
-twitter: @mitjafelicijan
+twitter: "@mitjafelicijan"
 
 # use name of css file without .css extension
 # https://github.com/highlightjs/highlight.js/tree/master/src/styles
