--- a/emailing/package.json
+++ b/emailing/package.json
@@ -13,6 +13,7 @@
     "@sendgrid/mail": "^7.4.0",
     "axios": "^0.21.1",
     "dayjs": "^1.9.7",
-    "handlebars": "^4.7.6"
+    "handlebars": "^4.7.6",
+    "yesno": "^0.3.1"
   }
 }
