--- a/emailing/package.json
+++ b/emailing/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "dayjs": "^1.9.7",
     "handlebars": "^4.7.6",
+    "meow": "^8.1.0",
     "yesno": "^0.3.1"
   }
 }
