--- a/config.ini
+++ b/config.ini
@@ -7,7 +7,7 @@ port = 8080
 title = Mitja Felicijan
 
 # descriptions displayed on index page, otherwise post description is used
-description = Remote work and how it affects the daily lives of people
+description = Fan of science fiction and dabbler in code
 
 [rss]
 
