--- a/config.ini
+++ b/config.ini
@@ -7,7 +7,7 @@ port = 8080
 title = Mitja Felicijan
 
 # descriptions displayed on index page, otherwise post description is used
-description = Fan of science fiction and dabbler in code
+description = You do not learn by relaxing. You learn by violently assaulting your problem until it surrenders its mysteries to you.
 
 [rss]
 
