Updates to mobile YY template

--- a/yapyap/feed.yaml
+++ b/yapyap/feed.yaml
@@ -25,6 +25,6 @@ posts:
       https://git.mitjafelicijan.com/yapyap.git/
     date: Sat, 29 Jan 2022 08:00:00 EST
 
-  - text: It has to start somewhere! 🖖
+  - text: It has to start somewhere! 🖖🤯🥷🦄
     date: Fri, 28 Jan 2022 08:00:00 EST
     image: /assets/yapyap/hello.png
