--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ hugo.linux
 
 # Temporary lock file while building
 /.hugo_build.lock
+
+# Openring build
+themes/simple/layouts/partials/openring.html
