Added Yap microblog

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,9 @@
   "[xml]": {
     "editor.formatOnSave": false,
     "editor.formatOnPaste": false
+  },
+  "[xsl]": {
+    "editor.formatOnSave": false,
+    "editor.formatOnPaste": false
   }
 }
