Added search option with lunr.js

--- a/config.toml
+++ b/config.toml
@@ -40,18 +40,7 @@ enableRobotsTXT = true
   [markup.highlight]
     style = 'github'
 
-# Taxonomies.
-[outputs]
-  index = ["HTML", "atom"]
-  section = ["HTML", "notes"]
-
 # Output formats.
-[outputFormats]
-  [outputFormats.atom]
-    mediatype = "application/rss"
-    rel = "atom"
-    baseName = "atom"
-  [outputFormats.notes]
-    mediatype = "application/rss"
-    rel = "notes"
-    baseName = "notes"
+[outputs]
+  home = ["HTML", "RSS", "JSON"]
+  section = ["HTML", "RSS", "JSON"]
