--- a/_config.yml
+++ b/_config.yml
@@ -20,3 +20,16 @@ plugins:
 jekyll-minifier:
   uglifier_args:
     harmony: true
+
+exclude:
+  - bin/
+  - .sass-cache/
+  - .jekyll-cache/
+  - gemfiles/
+  - Gemfile
+  - Gemfile.lock
+  - node_modules/
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
