--- a/.pages.yml
+++ b/.pages.yml
@@ -1,1 +1,15 @@
 media: assets
+content:
+  - name: posts
+    label: Posts
+    type: collection
+    path: _posts
+    fields:
+      - { name: title, label: Title, type: string }
+      - { name: permalink, label: Permalink, type: string }
+      - { name: date, label: Date, type: date }
+      - { name: layout, label: Layout, type: string }
+      - { name: type, label: Type, type: string }
+      - { name: draft, label: Draft, type: boolean, default: true }
+      - { name: tags, label: Tags, type: string }
+      - { name: body, label: Body, type: rich-text }
