--- a/.pages.yml
+++ b/.pages.yml
@@ -8,7 +8,7 @@ content:
       - { name: title, label: Title, type: string }
       - { name: permalink, label: Permalink, type: string }
       - { name: date, label: Date, type: date }
-      - { name: layout, label: Layout, type: string }
+      - { name: layout, label: Layout, type: string, hidden: true }
       - { name: type, label: Type, type: string }
       - { name: draft, label: Draft, type: boolean, default: true }
       - { name: tags, label: Tags, type: string }
