--- a/.pages.yml
+++ b/.pages.yml
@@ -3,7 +3,7 @@ content:
   - name: posts
     label: Posts
     type: collection
-    path: _posts
+    path: _posts/posts
     fields:
       - name: title
         label: Title
@@ -23,11 +23,70 @@ content:
         label: Draft
         type: boolean
         default: true
+      - name: published
+        label: Published
+        type: boolean
+        default: false
       - name: type
         label: Type
-        type: select
-        options:
-          values: [ post, note ]
+        type: string
+        default: post
+      - name: body
+        label: Body
+        type: rich-text
+  - name: notes
+    label: Notes
+    type: collection
+    path: _posts/notes
+    fields:
+      - name: title
+        label: Title
+        type: string
+      - name: permalink
+        label: Permalink
+        type: string
+      - name: date
+        label: Date
+        type: date
+      - name: layout
+        label: Layout
+        type: string
+        default: post
+        hidden: true
+      - name: draft
+        label: Draft
+        type: boolean
+        default: true
+      - name: published
+        label: Published
+        type: boolean
+        default: false
+      - name: type
+        label: Type
+        type: string
+        default: note
+      - name: body
+        label: Body
+        type: rich-text
+  - name: thoughts
+    label: Thoughts
+    type: collection
+    path: _posts/thoughts
+    fields:
+      - name: title
+        label: Title
+        type: string
+      - name: permalink
+        label: Permalink
+        type: string
+      - name: published
+        label: Published
+        type: boolean
+        default: false
+      - name: type
+        label: Type
+        type: string
+        default: thought
       - name: body
         label: Body
         type: rich-text
