--- a/.pages.yml
+++ b/.pages.yml
@@ -31,6 +31,7 @@ content:
         label: Type
         type: string
         default: post
+        hidden: true
       - name: body
         label: Body
         type: rich-text
@@ -65,6 +66,7 @@ content:
         label: Type
         type: string
         default: note
+        hidden: true
       - name: body
         label: Body
         type: rich-text
@@ -84,6 +86,7 @@ content:
         label: Type
         type: string
         default: thought
+        hidden: true
       - name: body
         label: Body
         type: rich-text
