--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,6 +18,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Get JBMAFP and build
         run: |
           wget https://github.com/mitjafelicijan/jbmafp/releases/download/v0.3/jbmafp.zip
